<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cate_reiki">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Reiki"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="10sp"
            android:textSize="28sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="10dp"
            android:layout_margin="10sp"
            android:src="@drawable/reiki_home"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:justificationMode="inter_word"
                android:text="@string/inro_reiki"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:justificationMode="inter_word"
                android:text="@string/origin_reiki"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:justificationMode="inter_word"
                android:text="@string/uses_and_adv_reiki"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:justificationMode="inter_word"
                android:text="@string/practices_reiki"/>
        </LinearLayout>
    </LinearLayout>


</ScrollView>