<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cate_ayurveda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:text="Ayurveda"
            android:textStyle="bold"
            android:padding="10sp"
            android:textSize="28sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="10dp"
            android:layout_margin="10sp"
            android:src="@drawable/home_ayur"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:justificationMode="inter_word"
                android:text="@string/introduction_of_auyerveda"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:justificationMode="inter_word"
                android:text="@string/origin_of_auyerveda"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:justificationMode="inter_word"
                android:text="@string/uses_and_advantages_of_auyerveda"/>

            <!--                <TextView-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:padding="5dp"-->
            <!--                    android:justificationMode="inter_word"-->
            <!--                    android:text="@string/names_in_the_list_auyer"/>-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:justificationMode="inter_word"
                android:text="@string/practioner_ayur"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:justificationMode="inter_word"
                android:text="@string/names_of_the_practioner_auyer"/>

        </LinearLayout>
    </LinearLayout>
    <!--     <androidx.appcompat.widget.LinearLayoutCompat-->
    <!--         android:layout_width="match_parent"-->
    <!--         android:layout_height="wrap_content" >-->
    <!--         -->
    <!--     </androidx.appcompat.widget.LinearLayoutCompat>  -->

</ScrollView>